maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:57: error: type mismatch;
 found   : Int
 required: Boolean
    if (Math.abs(adjX)+Math.abs(adjY)==1 && 0<x+adjX<L && 0<y+adjY<H){
                                                     ^ShortestPathMaze:57: error: type mismatch;
 found   : Int
 required: Boolean
    if (Math.abs(adjX)+Math.abs(adjY)==1 && 0<x+adjX<L && 0<y+adjY<H){
                                                                   ^